BMI 측정일 추가 bmi 계산 결과 출력값 소수자리 제어

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,6 +15,7 @@
     </label><br>
     <input type="submit" value="측정"> <input type="reset" value="취소"> 
   </form>
-<p> BMI 측정 결과 : [[ ${bmi}]] </p>
+	<p> 측정일 : [[ ${now}]] </p>  
+	<p> BMI 측정 결과 : [[ ${bmi}]] </p>
 </body>
 </html>
